--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,20 @@
     <title>Social-Posts</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-<body>
-    <header>
-        <h1>Social Posts</h1>
-    </header>
-    
 
-   <script src="./assets/main.js"></script>
+<body>
+
+    <!--Title-->
+    <div class="header">
+        <h1>Social-Posts</h1>
+    </div>
+
+    <div id="container" class="lista-post">
+
+        
+
+
+    <script src="./assets/main.js"></script>
 </body>
+
 </html>
